<resources>
    <string name="app_name">Bytom</string>

    <!-- Asset Management -->
    <string name="as_management_default_title">BTM</string>
    <string name="as_management_monthly_income">Monthly income</string>
    <string name="as_management_monthly_expenditure">Monthly expenditure</string>
    <string name="as_management_recent_transactions">Recent transactions</string>
    <string name="as_management_transfer">Transfer</string>
    <string name="as_management_receipt">Receipt</string>
    <string name="as_management_transfer_failed">Transaction failed</string>
    <string name="as_management_equ_to_rmb">≈ ￥ </string>

    <string name="as_transfer_title">Transfer</string>
    <string name="as_receipt_title">Collection code</string>
    <string name="as_transfer_address">Payee wallet address</string>
    <string name="as_transfer_number">Quantity</string>
    <string name="as_transfer_comment">Note</string>
    <string name="as_transfer_gas">Gas</string>
    <string name="as_transfer_gas_standard">Standard</string>
    <string name="as_transfer_gas_fast">Fast</string>
    <string name="as_transfer_gas_customize">Customize</string>
    <string name="as_transfer_gas_number">Please enter Gas</string>
    <string name="as_transfer_next">Next</string>
    <string name="as_transfer_gas_btm">BTM</string>
    <string name="as_transfer_gas_mbtm">mBTM</string>
    <string name="as_transfer_gas_neu">NEU</string>
    <string name="as_transfer_passwd_dialog_tips">Please enter your wallet password</string>
    <string name="as_transfer_passwd_cancel">Cancel</string>
    <string name="as_transfer_passwd_commit">Commit</string>

    <!-- Scan -->
    <string name="scan_title">Scan</string>
    <string name="scan_menu_gallery">Gallery</string>
    <string name="scan_no_result">No related information scanned</string>

    <!-- demos -->
    <string name="request_string">String Request</string>
    <string name="request_json">Json Request</string>
    <string name="request_gson">Gson Request</string>


    <string name="trans_record">交易记录</string>
    <string name="trans_req_data_failed">数据请求失败</string>
    <string name="trans_success">交易成功</string>
    <string name="trans_failed">交易失败</string>
    <string name="trans_detail">交易详情</string>
    <string name="trans_detail_status">交易状态</string>
    <string name="trans_detail_send">发送方&#160;&#160;&#160;&#160;</string>
    <string name="trans_detail_receive">接收方&#160;&#160;&#160;&#160;</string>
    <string name="trans_detail_fee">矿工费&#160;&#160;&#160;&#160;</string>
    <string name="trans_detail_ps">备注&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="trans_detail_num">交易号&#160;&#160;&#160;&#160;</string>
    <string name="trans_detail_time">时间&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>

    <string name="switch_wallet_title">切换钱包</string>
    <string name="switch_wallet_personal">私房钱</string>
    <string name="switch_wallet_vault">小金库</string>
    <string name="switch_wallet_little">零钱包</string>
    <string name="switch_wallet_create">创建钱包</string>
    <string name="switch_wallet_import">导入钱包</string>

    <!-->
    chinese for wallet
    <-->
    <string name="create_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="wallet">钱包</string>
    <string name="add_wallet">添加钱包</string>
    <string name="wallet_alias">别名</string>
    <string name="wallet_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_alias">请输入钱包名称</string>
    <string name="input_password">请输入钱包密码</string>
    <string name="input_confirm">请输入确认密码</string>
    <string name="import_hint">直接复制粘比原链钱包文本内容到输入框</string>
    <string name="about">about BytomWallet</string>
    <string name="home">首页</string>
    <string name="private_wallet">私人钱包</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="private_copy">复制</string>
    <string name="sec_warn">安全警告:</string>
    <string name="sec_warn_hint">请确认四周无人及无任何摄像设备，忽用截图或拍照的方式保存钱包文件，切勿将钱包文件保存至邮箱，记录本，网盘，聊天工具等，非常危险</string>


    <!--首页资产、我的-->
    <string name="nav_assets">资产</string>
    <string name="nav_mine">我的</string>
    <string name="home_mine_mine">我</string>
    <string name="home_mine_wallet">钱包</string>
    <string name="home_mine_transaction_record">交易记录</string>

    <string name="home_mine_node_left">节点</string>
    <string name="home_mine_node_right">BTM(btmscan.io)</string>
    <string name="home_mine_currency_left">货币</string>
    <string name="home_mine_currency_right">人民币-CNY</string>
    <string name="home_mine_share_left">分享</string>
    <string name="home_mine_share_right"> </string>
    <string name="home_mine_update_left">关于Bytom Wallet</string>
    <string name="home_mine_update_right">1.0212(有新版本)</string>

    <string name="home_asset_private_money">私房钱</string>
    <string name="home_asset_total_money">总资产(≈￥)</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="backup_wallet">备份钱包</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency">currency</string>
    <string name="currency_cny">RMB - CNY</string>
    <string name="currency_usdt">dollar - USDT</string>
    <string name="currency_btc">bitcoin - BTC</string>
    <string name="save">save</string>
    <string name="title_activity_site">SiteActivity</string>
    <string name="action_settings">Settings</string>
    <string name="site">site</string>
    <string name="wallet_site">wallet site url</string>
    <string name="www_bytom_io">w3.bytom.io</string>
    <string name="default_site">default site</string>
    <string name="submit">submit</string>

    <!-->
    english for wallet
    <string name="create_wallet">Create Wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="wallet_string">Wallet</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wallet_alias">alias</string>
    <string name="wallet_password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="input_alias">input wallet name please</string>
    <string name="input_password">input wallet password please</string>
    <string name="input_confirm">input wallet confirm password please</string>
    <string name="import_hint">please paste the text content of the bytom wallet to input box directly</string>
    <string name="private_wallet">Private Wallet</string>
    <string name="change_password">Reset Password</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="cancel">cancel</string>
    <string name="confirm">confirm</string>
    <string name="private_copy">copy</string>
    <string name="sec_warn">Security warning:</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="backup_wallet">backup wallet</string>
    <-->
</resources>
