<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/as_transfer_address"
            style="@style/AsTransferEdit"
            android:layout_width="match_parent"
            android:hint="@string/as_transfer_address" />

        <EditText
            android:id="@+id/as_transfer_number"
            style="@style/AsTransferEdit"
            android:layout_width="match_parent"
            android:layout_below="@id/as_transfer_address"
            android:hint="@string/as_transfer_number" />

        <EditText
            android:id="@+id/as_transfer_comment"
            style="@style/AsTransferEdit"
            android:layout_width="match_parent"
            android:layout_below="@id/as_transfer_number"
            android:hint="@string/as_transfer_comment" />

        <TextView
            android:id="@+id/as_transfer_gas_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/as_transfer_comment"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="9dp"
            android:text="@string/as_transfer_gas" />

        <RadioGroup
            android:id="@+id/as_transfer_gas_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/as_transfer_gas_title"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/as_transfer_gas_standard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/as_transfer_gas_standard" />

            <RadioButton
                android:id="@+id/as_transfer_gas_fast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/as_transfer_gas_fast" />

            <RadioButton
                android:id="@+id/as_transfer_gas_customize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/as_transfer_gas_customize" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/as_transfer_gas_number_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/as_transfer_gas_type"
            android:visibility="invisible"
            android:layout_marginTop="21dp">
            <EditText
                android:id="@+id/as_transfer_gas_number"
                style="@style/AsTransferEdit"
                android:layout_width="match_parent"
                android:hint="@string/as_transfer_gas_number" />

            <Button
                android:id="@+id/as_transfer_gas_coin_type"
                android:layout_width="48dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/as_transfer_gas_coin_type_bg"
                android:text="BTM" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/as_transfer_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/as_bottom_view_height"
        android:layout_alignParentBottom="true"
        android:background="#10C2AE"
        android:text="@string/as_transfer_next"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF" />

</RelativeLayout>