<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BytomActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_test"
        style="@style/layout_match_wrap"
        android:text="交易记录" />

    <Button
        android:id="@+id/bt_asset_management"
        style="@style/layout_match_wrap"
        app:layout_constraintTop_toBottomOf="@id/bt_test"
        android:text="资产管理" />

    <Button
        android:id="@+id/bt_wallet"
        style="@style/layout_match_wrap"
        app:layout_constraintTop_toBottomOf="@id/bt_asset_management"
        android:text="@string/wallet"/>

    <Button
        android:id="@+id/btn_about"
        style="@style/layout_match_wrap"
        app:layout_constraintTop_toBottomOf="@id/bt_wallet"
        android:text="@string/about"/>
    <Button
        android:id="@+id/bt_home"
        style="@style/layout_match_wrap"
        app:layout_constraintTop_toBottomOf="@id/btn_about"
        android:text="@string/home"/>

    <Button
        android:id="@+id/btn_currency"
        style="@style/layout_match_wrap"
        app:layout_constraintTop_toBottomOf="@id/bt_home"
        android:text="@string/currency"/>

    <Button
        android:id="@+id/btn_site"
        style="@style/layout_match_wrap"
        app:layout_constraintTop_toBottomOf="@id/btn_currency"
        android:text="@string/site"/>

</android.support.constraint.ConstraintLayout>