<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".BytomActivity">

    <Button
        android:id="@+id/request_string"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/request_string" />

    <Button
        android:id="@+id/request_json"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/request_json" />

    <Button
        android:id="@+id/request_gson"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/request_gson" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/result_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>
</LinearLayout>