<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/home_mine_mine"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="#303739"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="#303739"
        android:orientation="horizontal"
        android:text="@string/home_asset_total_money">

        <RelativeLayout
            android:id="@+id/rl_home_mine_wallet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_home_mine_wallet"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@mipmap/wallet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_home_mine_wallet"
                style="@style/home_mine_white_text"
                android:text="@string/home_mine_wallet"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_home_mine_transaction_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_home_mine_transaction_record"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@mipmap/note"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_home_mine_transaction_record"
                style="@style/home_mine_white_text"
                android:text="@string/home_mine_transaction_record"/>
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_home_mine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>